// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LowerInnerShadow should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LowerInnerShadow />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "d": "M106,191.1c26,0,49.7-9.7,67.7-25.8c-16.5,18.8-40.7,30.8-67.7,30.8c-27,0-51.3-11.9-67.7-30.8 C56.3,181.3,80,191.1,106,191.1z",
      "fill": "#F8CB31",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "d": "M106,191.1c26,0,49.7-9.7,67.7-25.8c-16.5,18.8-40.7,30.8-67.7,30.8c-27,0-51.3-11.9-67.7-30.8 C56.3,181.3,80,191.1,106,191.1z",
        "fill": "#F8CB31",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LowerInnerShadow should render as grayscale 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LowerInnerShadow
    isGrayScale={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "d": "M106,191.1c26,0,49.7-9.7,67.7-25.8c-16.5,18.8-40.7,30.8-67.7,30.8c-27,0-51.3-11.9-67.7-30.8 C56.3,181.3,80,191.1,106,191.1z",
      "fill": "#fcfcfc",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "d": "M106,191.1c26,0,49.7-9.7,67.7-25.8c-16.5,18.8-40.7,30.8-67.7,30.8c-27,0-51.3-11.9-67.7-30.8 C56.3,181.3,80,191.1,106,191.1z",
        "fill": "#fcfcfc",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
